--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,68 +1,64 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<style>
+  <meta charset="UTF-8" />
+  <title>Adventure Hills Park | Tours, Camping, RV Sites & Boat Rentals</title>
+  <style>
     body {
       background-color: #566e3d;
       margin: 0;
     }
     nav ul {
-         list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #3E3F43;
-        display: table;
-        width: 100%;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
+      background-color: #3E3F43;
+      display: table;
+      width: 100%;
     }
     nav li {
-        display: table-cell
+      display: table-cell;
     }
     nav li a {
-        display: block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
     }
     li a:hover {
-        background-color: #bbb236;
-    } 
+      background-color: #bbb236;
+    }
     h1 {
-        font-family: 'Courier New', Courier, monospace;
-        font-size: large;
-        font-weight: 300;
-        font-display: ;
+      font-family: 'Courier New', Courier, monospace;
+      font-size: large;
+      font-weight: 300;
     }
     ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
+      list-style-type: none;
+      margin: 0;
+      padding: 0;
+      overflow: hidden;
     }
-</style>
-    <meta charset="UTF-8" />
-    <title>Adventure Hills Park: Tours, Camping, RVs, Boat Rentals</title>
-    <header>
-        <nav>
-            <h1>Adventure Hills Parks - Plan your next vacation!</h1>
-            <ul>
-                <li><a href="Home.asp">Home</a></li>
-                <li><a href="Parks.asp">Parks</a></li>
-                <li><a href="Tours.asp">Tours</a></li>
-                <li><a href="Camping.asp">Camping</a></li>
-                <li><a href="RVs.asp">RVs</a></li>
-                <li><a href="Boat Rentals.asp">Boat Rentals</a></li>
-                <li><a href="Boat Rentals.asp">Boat Rentals</a></li>
-                <li style="float:right"><a class="active" href="#about">Login</a></li>
-            </ul>
-        </nav>
-    </header>
+  </style>
 </head>
 <body>
-  <h1>
-    Sample Text
-  </h1>
+  <header>
+    <nav aria-label="Main navigation">
+      <h1>Adventure Hills Parks - Plan your next vacation!</h1>
+      <ul>
+        <li><a href="Home.asp">Home</a></li>
+        <li><a href="Parks.asp">Parks</a></li>
+        <li><a href="Tours.asp">Tours</a></li>
+        <li><a href="Camping.asp">Camping</a></li>
+        <li><a href="RVs.asp">RVs</a></li>
+        <li><a href="Boat Rentals.asp">Boat Rentals</a></li>
+        <li><a href="Login.asp">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+  <h1>Sample Text</h1>
   <picture></picture>
 </body>
 </html>
